small update on content display

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 	<div class="glassbox">
 		<center>
 		<br>
-		<h3>Hi am <span class="myprofession"></span></h3>
+		<h3>Hi, am <span class="myprofession"></span></h3>
 	</center>
 	<center>
 		<p>
-			got interest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance
+			Got interest on IoT, Since it minimize human effort: As the devices of IoT interact and communicate with each other and do lot of task for us, thus they minimize the human effort,error and save time
 		</p>
 	</center>
 	<br>
@@ -117,6 +117,14 @@
 				</section>
 				<hr>
 				<section>
+				<label><strong>University of Colorado</strong> <span>(sep 2020 - nov 2020)</span></label><br>
+				<label><strong>Windows Sever Magement and Security</strong></label>
+				<p>
+				To increase my skills on windows sever 	
+				</p>	
+				</section>
+				<hr>
+				<section>
 				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
 				<label><strong>Introduction to Web Development</strong></label>
 				<p>
@@ -153,6 +161,16 @@
 							</td>
 						</tr>
 							<tr>
+							<td class="rateitem"> Git/Github</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="gitratetrain">
+										<center><label>84 %</label></center>
+									</div>
+								</div>
+							</td>
+						</tr>
+							<tr>
 							<td class="rateitem"> CSS</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
@@ -178,16 +196,6 @@
 								<div id="ratetrack">
 									<div id="javascriptratetrain">
 										<center><label>60 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> Git</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="gitratetrain">
-										<center><label>59 %</label></center>
 									</div>
 								</div>
 							</td>
@@ -259,7 +267,7 @@
 		<br>
 		<p>
 			Hellow am a Dynamic and detail-oriented Web Developer with a knack for conceptualizing and delivering elegant, user-friendly solutions effectively and efficiently. Possesses a track record of developing an e-commerce web app. Armed with an extensive understanding of end-to-end SDLC and cloud computing. Regular participant and organizer of local web developer meetups..<br>
-			Also a Motivated designer and developer with experience creating custom websites through PHP and CSS. Strong collaboration skills and proven history of application development.JavaScript, MySQL and Firebase.<br>
+			Also a Motivated designer and developer with experience creating custom websites through HTML,JavaScript and CSS. Strong collaboration skills and proven history of application development.Armed with MySQL and Firebase.<br>
 			
 
 		</p>
@@ -288,11 +296,11 @@
 <table>
 			<tr>
 				<td><a><i class="fa fa-phone icon"></i></a></td>
-				<td>0791958878</td>
+				<td>+254791958878</td>
 			</tr>
 			<tr>
 				<td><a><i class="fa fa-phone icon"></i></a></td>
-				<td>0738161992</td>
+				<td>+254738161992</td>
 			</tr>
 </table>
 	</center>
