emal and feedback development

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 			<div class="submenu-menu">
 		
 				<a href="index.html#smallcards" class="slidemenup">Portfolio</a>
-				<a href="index.html#smallcards" class="slidemenur">Resume</a>	
+				<a href="index.html#smallcards" class="slidemenur">Resume</a>
+				<a href="index.html#smallcards" class="slidemenuf">Feedback</a>	
 			</div>
 			
 		</div>
@@ -254,6 +255,32 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- feedback -->
+
+		<div class="Feedback" id="Feedback">
+			<div class="mydiscription">
+				<p>
+					Hello, am Daniel kindly drop your feedback here with your email if needs reply 
+				</p>
+			</div>
+				<fieldset>
+					<legend>My reach out</legend>
+					<label>Subject</label><br>
+					<input type="text" name="" placeholder="Enter subject here" id="feedbacksubject"><br>
+					<label>Your feedback/message</label><br>
+					<textarea id="feedbackmessage">
+						
+					</textarea><br>
+					<label>You Email :</label><br>
+					<input type="email" name="" placeholder="email for reply" id="feedbackemail"><br>
+					<button id="btnsubmitfeedback">submit</button>
+				</fieldset>
+			
+			</div>
+		</div>
+
+		<!-- end of feedback -->
 		
 		
 	</div><br>
