emal and feedback development

--- a/index.html
+++ b/index.html
@@ -369,6 +369,14 @@
 	</div>
 
 	<!-- body end start of scripts -->
+
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script type="text/javascript" src="scripts/msdancon.js"></script>
 <script type="text/javascript" src="scripts/index2.js"></script>
 </body>
 </html>
