--- a/index2.html
+++ b/index2.html
@@ -17,13 +17,7 @@
 
 </head>
 <body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #9e8e81 ">
-<!-- <div id="navbar" style="background: #051818 ">
-  <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 40%"></a>
-  <div id="navbar-right">
-  <label style="color: white">Daniel Kipchirchir</label>
-  </div>
-</div>
- -->
+
 
     <div class="parent-element">
     	 <section class="section-home snapsection">
@@ -49,7 +43,7 @@
 	<br>
 	</div>
 	
-	<a href="index.html#section-two"><div class="scrolldown">
+	<a href="index2.html#section-two"><div class="scrolldown">
 		<span></span>
 		<span></span>
 		<span></span>
@@ -91,283 +85,13 @@
 	 <a href="#" target="_blank"><i class="fa fa-linkedin-square icon"></i></a>
 	 </center>
 	</div><br>
-
-	
-		
-		
-		<!-- More infor -->
   <div id="smallcards">
   	 my other infor
   </div>
 		
-		
-
-		<!-- end of more infor -->
-		
-		
 	</div><br>
     	 </section>
-    	<section class="section-resume snapsection">
-			<!-- repeat -->
-			<div class="resumecontent" id="resumecontent">
-			<!-- start of resume -->
-			<div class="myresumediscription">
-				<p>
-					Hello have a look at my career journey. To me i believe in doing, course in doing so you are able to check your steps 
-				</p>
-			</div>
-			<div class="myresumecontent">
-			<center>
-				<label><strong>Education</strong></label>
-			</center>
-				<hr>
-				<section>
-				<label><strong>Kibabii University</strong> <span>(aug 2018 - currently)</span></label><br>
-				<label><strong>Bachelor of Information Technology</strong></label>
-				<p>
-				Currently pursuing my career path towards the world of tech. Am pround to be part of the current world treand since we are moving towards degitalization   	
-				</p>	
-				</section>
-				<hr>
-				<section>
-				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
-				<label><strong>Introduction to Web Development</strong></label>
-				<p>
-				To certisfy my perssion on website development and build my foundation as a web developer  	
-				</p>	
-				</section>
-				<hr>
-				<section>
-				<label><strong>University of Colorado</strong> <span>(sep 2020 - nov 2020)</span></label><br>
-				<label><strong>Windows Sever Magement and Security</strong></label>
-				<p>
-				To increase my skills on windows sever 	
-				</p>	
-				</section>
-				<hr>
-				<section>
-				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
-				<label><strong>Introduction to Web Development</strong></label>
-				<p>
-				To certisfy my perssion on website development and build my foundation as a web developer  	
-				</p>	
-				</section>
-			</div>
-		</div>
-    	 </section>
-    	 <section class="section-projects snapsection"> 
-        <div class="Portfolio" id="Portfolio">
-			<div class="mydiscription">
-				<p>
-					Hello, my journey and love of tech has drastically increased. The driving power behind is the dynamically fast changing world. Almost everything if not all nowadays relay on Technology "how passionate am I to be part of "
-				</p>
-			</div>
-			<div class="mydiscriptioncontent">
-				<div class="mycontent1">
-					<a href="#"><img src="images/screenshots/ecmmerceshort.jpg" width="100%"></a>
-					<!-- <a href="#">visit</a>&nbsp;&nbsp;-->
-					<label>
-						ecommerce website that facilitated online shopping specificaly for beauty
-					</label>
-				</div><br>
-				<div class="mycontent2">
-					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
-					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
-					<label>
-						Covid-19 update the site specifically for country Kenya it gave update on both infection accumulation and also government directives and preventive measures
-					</label>
-				</div>
-			</div><br>
-			<div class="mydiscriptioncontent">
-				<div class="mycontent1">
-					<a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/tracktraceshort.jpg" width="100%"></a>
-					<a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
-					<label>
-						 An online car  and cargo tracking website for specific company provider
-					</label>
-				</div><br>
-				<div class="mycontent2">
-					<a href="#"><img src="images/screenshots/trainticketshort.jpg" width="100%"></a>
-					<!--<a href="#">visit</a>&nbsp;&nbsp;-->
-					<label>
-						An online train ticket booking platform to aid in time management and synchronize terminal activities
-					</label>
-				</div>
-			</div>
-		</div>
-    	 </section>
-    	 <section class="section-rating snapsection"> 
-
-    	 		<div class="myresumerating">
-				<center><label><strong>My Skills Rating</strong></label></center>
-				<div class="myrate">
-					<table id="ratingtable">
-						<thead>
-						<th class="rateitemhead">My skill</th>
-						<th class="ratescorehead">Rating</th>
-						</thead>
-							<tr>
-							<td class="rateitem"> Java</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="javaratetrain">
-										<center><label>90 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td class="rateitem"> HTML</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="htmlratetrain">
-										<center><label>85 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> Git/Github</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="gitratetrain">
-										<center><label>84 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> CSS</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="cssratetrain">
-										<center><label>83 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td class="rateitem"> JavaScript</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="javascriptratetrain">
-										<center><label>80 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> UI/UX Design</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="uxratetrain">
-										<center><label>72 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							
-						<tr>
-							<td class="rateitem"> Laravel</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="laravelratetrain">
-										<center><label>40 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-    	 </section>
-    	 <section class="section-stories snapsection">
-    	 		<div class="holder">
-	<div class="card">
-		<div class="card-text">
-
-		<center>About Me</center>
-		<br>
-		<p>
-			Hellow am a Dynamic and detail-oriented Web Developer with a knack for conceptualizing and delivering elegant, user-friendly solutions effectively and efficiently. Possesses a track record of developing an e-commerce web app. Armed with an extensive understanding of end-to-end SDLC and cloud computing. Regular participant and organizer of local web developer meetups..<br>
-			Also a Motivated designer and developer with experience creating custom websites through HTML,JavaScript and CSS. Strong collaboration skills and proven history of application development.Armed with MySQL and Firebase.<br>
-			
-
-		</p>
-			
-			
-		</div>
-		<svg> some logo here </svg>
-	</div>
-</div>
-    	 </section>
-    	  <section class="section-morestory snapsection">
-    	  	 more story
-    	  </section>
-    	  <section class="section-footer snapsection">
-    	  	<div id="moveup" style="background:#051818 ">
-	<center><div id="up"  style="background: #051818"><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
-	
-</div>
-    	  	<div id="footer" style="background: #051818; color: #f1f1f1 ">
-		
-		<center>
-	<label style="font-size: 24px">Best Quote</label>
-	<p>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</p> <br>
-<center>
-	<label style="font-size: 24px">Reach me...</label><br><br>
-	
-<table>
-			<tr>
-				<td><a><i class="fa fa-phone icon"></i></a></td>
-				<td>+254791958878</td>
-			</tr>
-			<tr>
-				<td><a><i class="fa fa-phone icon"></i></a></td>
-				<td>+254738161992</td>
-			</tr>
-</table>
-	</center>
-</center>
-	<hr>
-	<center>
-	<center>
-		<label><b>Go online</b></label><br>
-
-		<table>
-			<tr>
-				<td><a href="mailto:kirwadan03@gmail.com?subject=My reach out!" style="color: black"><i class="fa fa-envelope icon"></i> </a></td>
-				<td><a href="#">Email</a></td>
-			</tr>
-			<tr>
-				<td><a href="#" style="color: black"><i class="fa fa-twitter icon"></i></a></td>
-				<td><a href="https://twitter.com/kirwadan03" target="_blank">Twitter</a></td>
-			</tr>
-			<tr>
-				<td><a href="#" style="color: black"><i class="fa fa-skype icon"></i></a></td>
-				<td><a href="#">Skype</a></td>
-			</tr>
-			<tr>
-				<td><a href="#" style="color: black"><i class="fa fa-linkedin-square icon"></i></a></td>
-				<td><a href="#" target="_blank">Linkedin</a></td>
-			</tr>
-			<tr>
-				<td><a href="#" style="color: black"><i class="fa fa-facebook icon"></i></a></td>
-				<td><a href="#">Facebook</a></td>
-			</tr>
-	
-	</table>
-	<p>
-		&copy; 2020-<span class="currentyear"></span>   &nbsp;&nbsp; <br>
-		<a href="https://my-ws-dan.herokuapp.com">my-ws-dan</a>    
-	</p>
-	</center>
-	</center>
-	</div>
-    	  </section>
-    </div>
-
+    	
 
 	<!-- body end start of scripts -->
 
