new nav correction

--- a/index1.html
+++ b/index1.html
@@ -15,16 +15,16 @@
 
 
 </head>
-<body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #9e8e81 ">
+<body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #a0e3ee ">
 
-<div id="navbar" style="background: #051818 ">
+<div id="navbar" style="background: #4e919c">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 40%"></a>
   <div id="navbar-right">
   <label style="color: white">Daniel Kipchirchir</label>
   </div>
 </div>
 <!-- background image start -->
-<div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground3.jpg);background-size: cover;">
+<div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground2.png);background-size: cover;">
 	<div class="glassbox">
 		<center>
 		<br>
@@ -37,6 +37,9 @@
 	</center>
 	<br>
 	</div>
+	<!-- <div class="image-holder"> 
+		<img src="images/mypotrait.png">
+	</div>-->
 	
 	<a href="index.html#largecards"><div class="scrolldown">
 		<span></span>
@@ -61,15 +64,15 @@
 	 </center><br>
 	  <center>
 	 	<label><b>My Skills</b></label><br><br>
-	 	 <span><img src="https://img.shields.io/badge/-HTML-000000?style=flat&logo=html5&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-HTML-000000?style=flat&logo=html5&logoColor=FCC624"></span>
 	 	 <span><img src="https://img.shields.io/badge/-javascript-000000?style=flat&logo=javascript&logoColor=FCC624"></span><br>
-	 	 <span><img src="https://img.shields.io/badge/-Css-000000?style=flat&logo=css3&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Css-000000?style=flat&logo=css3&logoColor=FCC624"></span>
 	 	 <span><img src="https://img.shields.io/badge/-Vue.js-000000?style=flat&logo=vue.js&logoColor=FCC624"></span><br>
-	 	 <span><img src="https://img.shields.io/badge/-Laravel-000000?style=flat&logo=laravel&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Laravel-000000?style=flat&logo=laravel&logoColor=FCC624"></span>
 	 	  <span><img src="https://img.shields.io/badge/-Java-000000?style=flat&logo=java&logoColor=FCC624"></span><br>
-	 	 <span><img src="https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=FCC624"></span>
 	 	 <span><img src="https://img.shields.io/badge/-MSQL-000000?style=flat&logo=mysql&logoColor=FCC624"></span><br>
-	 	 <span><img src="https://img.shields.io/badge/-Firebase-000000?style=flat&logo=firebase&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Firebase-000000?style=flat&logo=firebase&logoColor=FCC624"></span>
 	 	  <span><img src="https://img.shields.io/badge/-GitHub-000000?style=flat&logo=github&logoColor=FCC624"></span>
 	 </center>
 	 <br>
@@ -82,215 +85,9 @@
 	</div><br>
 
 	<div id="smallcards">
-		<div class="submenu">
-			<label id="mytag">My <span class="selectedtab">Resume</span></label>
-			<span class="btnmenu"><i class="fa fa-bars icons"></i></span>
-			<div class="submenu-menu">
 		
-				<a href="index.html#smallcards" class="slidemenup">Portfolio</a>
-				<a href="index.html#smallcards" class="slidemenur">Resume</a>
-				<a href="index.html#smallcards" class="slidemenuf">Feedback</a>	
-			</div>
-			
-		</div>
-		<div class="resumecontent" id="resumecontent">
-			<!-- start of resume -->
-			<div class="myresumediscription">
-				<p>
-					Hello have a look at my career journey. To me i believe in doing, course in doing so you are able to check your steps 
-				</p>
-			</div>
-			<div class="myresumecontent">
-			<center>
-				<label><strong>Education</strong></label>
-			</center>
-				<hr>
-				<section>
-				<label><strong>Kibabii University</strong> <span>(aug 2018 - currently)</span></label><br>
-				<label><strong>Bachelor of Information Technology</strong></label>
-				<p>
-				Currently pursuing my career path towards the world of tech. Am pround to be part of the current world treand since we are moving towards degitalization   	
-				</p>	
-				</section>
-				<hr>
-				<section>
-				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
-				<label><strong>Introduction to Web Development</strong></label>
-				<p>
-				To certisfy my perssion on website development and build my foundation as a web developer  	
-				</p>	
-				</section>
-				<hr>
-				<section>
-				<label><strong>University of Colorado</strong> <span>(sep 2020 - nov 2020)</span></label><br>
-				<label><strong>Windows Sever Magement and Security</strong></label>
-				<p>
-				To increase my skills on windows sever 	
-				</p>	
-				</section>
-				<hr>
-				<section>
-				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
-				<label><strong>Introduction to Web Development</strong></label>
-				<p>
-				To certisfy my perssion on website development and build my foundation as a web developer  	
-				</p>	
-				</section>
-			</div>
-			<!-- end of resume -->
-			<!-- strat of rating -->
-			<div class="myresumerating">
-				<center><label><strong>My Skills Rating</strong></label></center>
-				<div class="myrate">
-					<table id="ratingtable">
-						<thead>
-						<th class="rateitemhead">My skill</th>
-						<th class="ratescorehead">Rating</th>
-						</thead>
-							<tr>
-							<td class="rateitem"> Java</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="javaratetrain">
-										<center><label>90 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td class="rateitem"> HTML</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="htmlratetrain">
-										<center><label>85 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> Git/Github</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="gitratetrain">
-										<center><label>84 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> CSS</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="cssratetrain">
-										<center><label>83 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td class="rateitem"> JavaScript</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="javascriptratetrain">
-										<center><label>80 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							<tr>
-							<td class="rateitem"> UI/UX Design</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="uxratetrain">
-										<center><label>72 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-							
-						<tr>
-							<td class="rateitem"> Laravel</td>
-							<td class="ratescore"> 
-								<div id="ratetrack">
-									<div id="laravelratetrain">
-										<center><label>40 %</label></center>
-									</div>
-								</div>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-<!-- end of rating -->
-		</div>
-		<!-- end of resume -->
-		<!-- start of portfolio -->
-		<div class="Portfolio" id="Portfolio">
-			<div class="mydiscription">
-				<p>
-					Hello, my journey and love of tech has drastically increased. The driving power behind is the dynamically fast changing world. Almost everything if not all nowadays relay on Technology "how passionate am I to be part of "
-				</p>
-			</div>
-			<div class="mydiscriptioncontent">
-				<div class="mycontent1">
-					<a href="#"><img src="images/screenshots/ecmmerceshort.jpg" width="100%"></a>
-					<!-- <a href="#">visit</a>&nbsp;&nbsp;-->
-					<label>
-						ecommerce website that facilitated online shopping specificaly for beauty
-					</label>
-				</div><br>
-				<div class="mycontent2">
-					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
-					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
-					<label>
-						Covid-19 update the site specifically for country Kenya it gave update on both infection accumulation and also government directives and preventive measures
-					</label>
-				</div>
-			</div><br>
-			<div class="mydiscriptioncontent">
-				<div class="mycontent1">
-					<a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/tracktraceshort.jpg" width="100%"></a>
-					<a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
-					<label>
-						 An online car  and cargo tracking website for specific company provider
-					</label>
-				</div><br>
-				<div class="mycontent2">
-					<a href="#"><img src="images/screenshots/trainticketshort.jpg" width="100%"></a>
-					<!--<a href="#">visit</a>&nbsp;&nbsp;-->
-					<label>
-						An online train ticket booking platform to aid in time management and synchronize terminal activities
-					</label>
-				</div>
-			</div>
-		</div>
-  <!-- end of portfolio -->
-		<!-- feedback -->
-
-		<div class="Feedback" id="Feedback">
-			<div class="mydiscription">
-				<p>
-					Hello, am Daniel kindly drop your feedback here with your email if needs reply 
-				</p>
-			</div>
-				<fieldset>
-					<legend>My reach out</legend>
-					<label>Subject</label><br>
-					<input type="text" name="" placeholder="Enter subject here" id="feedbacksubject"><br>
-					<label>Your feedback/message</label><br>
-					<textarea id="feedbackmessage">
-						
-					</textarea><br>
-					<label>You Email :</label><br>
-					<input type="email" name="" placeholder="email for reply" id="feedbackemail"><br>
-					<button id="btnsubmitfeedback">submit</button>
-				</fieldset>
-			
-			</div>
-		</div>
-
-		<!-- end of feedback -->
-		
+		small content
+		mytag
 		
 	</div><br>
 	<!-- end of content two -->
@@ -319,12 +116,12 @@
 <br><br>
 
 </div>
-<div id="moveup" style="background:#051818 ">
-	<center><div id="up"  style="background: #051818"><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
+<div id="moveup" style="background:#4e919c; ">
+	<center><div id="up"  style="background: #4e919c;"><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
 	
 </div>
  <!-- footer start -->
-<div id="footer" style="background: #051818; color: #f1f1f1 ">
+<div id="footer" style="background: #4e919c; color: #f1f1f1 ">
 		
 		<center>
 	<label style="font-size: 24px">Best Quote</label>
@@ -375,21 +172,13 @@
 	</table>
 	<p>
 		&copy; 2020-<span class="currentyear"></span>   &nbsp;&nbsp; <br>
-		<a href="https://my-ws-dan.herokuapp.com">my-ws-dan</a>    
+		<a href="https://my-ws-dan.herokuapp.com">danielkirwa</a>   
 	</p>
+	 <br> <br>
 	</center>
 	</center>
 	</div>
-     <!-- end of footer -->
-	<!-- body end start of scripts -->
 
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script type="text/javascript" src="scripts/msdancon.js"></script>
 <script type="text/javascript" src="scripts/index2.js"></script>
 </body>
 </html>
