--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #9e8e81 ">
+<body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #a0e3ee ">
 
 
     <div class="parent-element">
