new design complete content addition

--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="styles/parallax.css">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet"> 
  <style type="text/css">
    .about {
   background-image: url("images/bgnature.jpg");
   min-height: 450px;
 }
 .dashboard {
-  background-image: url("images/techbackground3.jpg");
+  background-image: url("images/background.jpg");
   min-height: 100%;
 }
 
@@ -39,8 +35,8 @@
 /* Turn off parallax scrolling for tablets and phones */
 @media(max-width: 850px){
 .about{
-    background-attachment: scroll;
-    min-height: 100%;
+    
+    min-height: 800px;
   }
   }
  </style>
@@ -58,7 +54,7 @@
 </div>
 
 <div class="mybibbon">
-  <p>“I’ve been passionate about technology since I was able to type. Have away st my mind to new enovations and inventiosn of mankind on technolgy. I knew  that I wanted to pursue technological oriented course to suit my passion, since I could not resist the inner me pushh towards tech. Am currently studing at <span class="mybold">KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY</span>”</p>
+  <p>“I’ve been passionate about technology since I was able to type. Have away st my mind to new enovations and inventiosn of mankind on technolgy. I knew that I wanted to pursue technological oriented course to suit my passion, since I could not resist the inner me pushh towards tech. Am currently studing at <span class="mybold">KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY</span>”</p>
 </div>
 
 <div class="about">
@@ -80,7 +76,9 @@
 
 <div class="skills">
   <div class="caption">
-  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Skills</span>
+ <div class="skill-card">
+   java skill
+ </div>
   </div>
 </div>
 
