--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="styles/parallax.css">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
  <style type="text/css">
+
    .about {
   background-image: url("images/bgnature.jpg");
   min-height: 450px;
@@ -112,7 +115,15 @@
 </div>
 <div class="footer">
   <div class="caption">
-  <span class="border">footer</span>
+  <div class="medialinks">
+    <a href="#"><i class="fa fa-envelope iconz"></i>&nbsp;&nbsp;<label class="hand-hover">kirwadan03@gmail.com</label></a><br><br>
+    <a href="#"><i class="fa fa-facebook iconz"></i>&nbsp;&nbsp;<label class="hand-hover">Facebook</label></a><br><br>
+    <a href="#"><i class="fa fa-twitter iconz"></i>&nbsp;&nbsp;<label class="hand-hover">Twitter</label></a><br><br>
+    <a href="#"><i class="fa fa-linkedin iconz"></i>&nbsp;&nbsp;<label class="hand-hover">Linkedin</label></a><br><br>
+  </div>
+  <div class="enddiv">
+     Daniel Kipchrchir &copy; 2020- 2021 <a href="bit.ly/daneilkirwa">danielkirwa.com </a> &trade;
+  </div>
   </div>
 </div>
 <script type="text/javascript" src="scripts/my-web-dan.js"></script>
