--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="#">Welcome</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">More</a></li>
+        <li><a href="index.html#skills">Skills</a></li>
+        <li><a href="index.html#projects">Projects</a></li>
+        <li><a href="index.html#more">More</a></li>
       </ul>
     </div>
   </nav>
@@ -54,7 +54,7 @@
         <div class="image-container js-scroll slide-left">
     <h1>Daniel Kipchirchir</h1>
          <div>
-           <img src="images/profile.jpg" width="310px">
+           <img src="images/profile.jpg" width="100%">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
@@ -75,7 +75,7 @@
 <!-- skills -->
 
 
-  <section class="scroll-container">
+  <section class="scroll-container" id="skills">
   <div class="scroll-element">
      <div class="skills-holder">
         <div class="technology-container js-scroll slide-left">
@@ -86,7 +86,7 @@
   </div>
    <div class="framework-container js-scroll slide-right">
     <h1>Frameworks</h1>
-    <div class="bar expert" data-skill="Laravel"></div>
+    <div class="bar expert" data-skill="Laravel"> <span class="text-dark">85%</span></div>
     <div class="bar back expert" data-skill="Vue.js"></div>
     <div class="bar back advanced" data-skill="React.js"></div>
     <div class="bar front advanced" data-skill="Node.js"></div>
@@ -108,7 +108,7 @@
   
 </section>
 <!-- web projects -->
-<section class="scroll-container">
+<section class="scroll-container" id="projects">
   <div class="scroll-element ">
     <center><label class="large">Web projects</label></center>
  <div class="projects-holder">
@@ -179,16 +179,16 @@
  <center><label class="large">Android</label></center>
   </div>
 </section>
-<section class="scroll-container">
+<section class="scroll-container" id="more">
   <div class="scroll-element">
- <center><label class="large">More(Events, Activities, Fun)</label></center>
+ <center><label class="large">Events, Activities, Fun</label></center>
  <br>
  <div class="events-holder">
   <div class="more-holder">
         <div class="image-container js-scroll slide-left">
     <h1>Industrial training</h1>
          <div>
-           <img src="images/profile.jpg" width="310px">
+           <img src="images/profile.jpg" width="310px" class="image-change">
          </div>
   </div>
    <div class="journey-container js-scroll slide-left">
@@ -201,8 +201,8 @@
   <div class="more-holder">
         <div class="image-container js-scroll slide-right">
     <h1>IoT Demonstration</h1>
-         <div>
-           <img src="images/iot.jpg" width="310px">
+         <div class="images-shape">
+           <img src="images/iot.jpg" width="310px" class="image-change">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
@@ -228,7 +228,7 @@
           <div class="tooltip">kirwadan03@gmail.com</div>
         </a>
         <!--2nd-->
-        <a href="github.com/daneilkirwa" class="social-icon social-icon--github" target="_blank">
+        <a href="https://github.com/danielkirwa" class="social-icon social-icon--github" target="_blank">
             <i class="fa fa-github"></i> 
             <div class="tooltip">36&nbsp;+&nbsp;Repositories</div>
           </a>
