--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="styles/background.css">
-  <link rel="stylesheet" type="text/css" href="styles/index.css">
-  <link rel="stylesheet" type="text/css" href="styles/skills.css">
-  <link rel="stylesheet" type="text/css" href="styles/content.css">
-    <link rel="stylesheet" type="text/css" href="styles/scrolleffect.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="skills.css">
+  <link rel="stylesheet" type="text/css" href="content.css">
+    <link rel="stylesheet" type="text/css" href="scrolleffect.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
  <style type="text/css">
